--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ footer .logo {
   padding-top: 94px;
   padding-bottom: 94px;
   /* outline: 2px solid tomato; */
-  width: 1600px;
+  max-width: 1600px;
 }
 
 h1,
@@ -178,11 +178,16 @@ ul {
   color: var(--accent-color);
 }
 
+img {
+  display: block;
+}
+
 /*------------- ГЕРОЙ -------------*/
 
 .section-hero.section {
   max-width: 1600px;
-  height: 600;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .section-hero {
@@ -229,7 +234,10 @@ button {
   padding: 10px 32px;
 
   letter-spacing: 0.06em;
-  background-color: #2196f3;
+
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
   color: var(--button-text-color);
 }
 
@@ -238,16 +246,17 @@ button {
   /* padding: 6px 25px; */
   color: #ffffff;
   background-color: var(--accent-color);
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
-/* .button:active {
-  padding: 6px 25px;
+.button-hero:active {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
-
-.button-hero:hover {
-  min-width: 216px;
-  padding: 10px 32px;
-} */
 
 /*------------- БЛОК 1 -------------*/
 
@@ -295,7 +304,9 @@ button {
 
 /*------------- БЛОК 2 -------------*/
 
-/* .section-work {} */
+.section-work {
+  padding-top: 0;
+}
 
 .work-title {
   font-weight: 700;
@@ -350,6 +361,15 @@ button {
   text-align: center;
 }
 
+.team-list .content {
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .team-list-item {
   background-color: #ffffff;
   margin-right: 30px;
@@ -359,9 +379,7 @@ button {
   margin-right: 0;
 }
 
-.team-pictures {
-  margin-bottom: 30px;
-}
+/* .team-pictures { } */
 
 .team-list-name {
   font-weight: 500;
@@ -376,7 +394,6 @@ button {
 }
 
 .team-text {
-  padding-bottom: 30px;
   font-size: 16px;
   line-height: 1.19;
 
@@ -414,6 +431,7 @@ button {
 .batton-portfolio {
   background: #f5f4fa;
   border-radius: 4px;
+  border: none;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -440,7 +458,7 @@ button {
 }
 
 .gallery-list-item .content {
-  margin: 20px 24px;
+  padding: 20px 24px;
 }
 
 /* Фіксований розмір */
@@ -480,8 +498,6 @@ button {
   letter-spacing: 0.06em;
 
   color: var(--primari-tex-color);
-
-  margin-top: 20px;
 }
 
 .gallery-tex {
@@ -500,6 +516,9 @@ address {
 }
 
 .footer-items {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   width: 1600px;
   background-color: #2f303a;
 }
@@ -558,15 +577,15 @@ address {
 }
 
 .footer-items .container {
-  /* display: flex;
-  flex-direction: column; */
-  padding-top: 60px;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo-footer {
-  padding-top: 60px;
-  padding-bottom: 0;
+  display: flex;
   margin-bottom: 20px;
+
+  padding: 0;
   margin-right: auto;
 }
 
@@ -574,7 +593,6 @@ address {
   margin-right: auto;
 }
 
-.address-container {
-  margin-top: 20px;
-  margin-bottom: 60px;
-}
+/* .address-container {
+
+} */
