--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ a.link {
 }
 
 .address-items .link {
+  display: flex;
   text-decoration: none;
 }
 
@@ -181,6 +182,38 @@ ul {
 
 img {
   display: block;
+}
+
+.icon-contact {
+  display: flex;
+}
+
+.contact-link {
+  display: flex;
+  align-items: center;
+  fill: #757575;
+}
+
+.icon-envelope {
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: inherit;
+}
+
+.contact-link.link:hover,
+.contact-link.link:focus {
+  fill: var(--accent-color);
+}
+
+.icon-tel {
+  display: flex;
+
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+
+  fill: inherit;
 }
 
 /*------------- ГЕРОЙ -------------*/
@@ -549,18 +582,58 @@ button {
 
   color: var(--paragraph-tex);
 }
-/*------------- НАШІ КЛІЄНТИ -------------*/
+/*------------- ПОСТІЙНІ КЛІЄНТИ -------------*/
+
 .section-clients {
   max-width: 1600px;
-  display: block;
+}
+
+.clients-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.67;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-text-color);
+
+  margin-bottom: 50px;
 }
 
 .clients-list {
   display: flex;
   align-items: center;
-  justify-items: center;
+  justify-content: space-between;
+  padding: 0;
+  fill: #afb1b8;
 }
 
+.client-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+
+.client-linc-icon {
+  display: block;
+  fill: #afb1b8;
+}
+
+.client-item:hover,
+.client-item:focus {
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+}
+
+.client-icon:focus,
+.client-icon:hover {
+  fill: var(--accent-color);
+}
 /*------------- FOOTER -------------*/
 
 address {
@@ -573,6 +646,10 @@ address {
 
   max-width: 1600px;
   background-color: #2f303a;
+}
+
+.footer-items .container {
+  display: flex;
 }
 
 .address-items {
@@ -645,9 +722,9 @@ address {
   margin-right: auto;
 }
 
-/* .address-container {
-
-} */
+.address-container {
+  display: flex;
+}
 
 .join-title {
   font-weight: 700;
@@ -661,14 +738,60 @@ address {
 
 .footer-icon-join {
   display: flex;
-
 }
 
-.icon-tel {
-  fill: #188ce8;
+.linc-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+
+  fill: #afb1b8;
 }
 
-.icon-tel:hover {
-  fill: aqua;
+.social-icon {
+  fill: inherit;
 }
 
+.linc-icon:hover,
+.linc-icon:focus {
+  background-color: var(--accent-color);
+  fill: #ffffff;
+}
+
+.team-social-icon-list {
+  display: flex;
+  justify-content: space-between;
+
+  margin-right: 32px;
+  margin-left: 32px;
+  padding: 0;
+
+  height: 44px;
+}
+
+.social-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.footer-social-icon-list {
+  display: flex;
+}
+
+.footer-social-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+
+  margin-bottom: 20px;
+}
