--- a/css/styles.css
+++ b/css/styles.css
@@ -502,7 +502,7 @@ button {
 
 /*------------- Кнопки Навігації PORTFOLIO -------------*/
 
-.batton-portfolio {
+.button-portfolio {
   background: #f5f4fa;
   border-radius: 4px;
   border: none;
@@ -562,6 +562,12 @@ button {
 
 .gallery-list-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+
+.gallery-list-item:hover,
+.gallery-list-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .gallery-list-title {
