--- a/css/styles.css
+++ b/css/styles.css
@@ -535,6 +535,11 @@ button {
   padding: 20px 24px;
 }
 
+.gallery-icon {
+  display: inline-block;
+  border: 1px solid #eeeeee;
+}
+
 /* Фіксований розмір */
 
 /* .gallery-list-item {
@@ -552,8 +557,6 @@ button {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
-
-  border: 1px solid #eeeeee;
 }
 
 .gallery-list-item:nth-child(3n) {
@@ -564,8 +567,8 @@ button {
   margin-bottom: 0;
 }
 
-.gallery-list-item:hover,
-.gallery-list-item:focus {
+.gallery-icon:hover,
+.gallery-icon:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -614,7 +617,9 @@ button {
   fill: #afb1b8;
 }
 
-.client-item {
+/*=========== ПОСИЛАННЯ НА ПОСТІЙНИХ КЛІЄНТІВ ===========*/
+
+.client-linc-icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -623,21 +628,18 @@ button {
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
-}
 
-.client-linc-icon {
-  display: block;
   fill: #afb1b8;
 }
 
-.client-item:hover,
-.client-item:focus {
+.client-linc-icon:hover,
+.client-linc-icon:focus {
   border: 1px solid var(--accent-color);
   border-radius: 4px;
 }
 
-.client-icon:focus,
-.client-icon:hover {
+.client-linc-icon:focus,
+.client-linc-icon:hover {
   fill: var(--accent-color);
 }
 /*------------- FOOTER -------------*/
@@ -756,12 +758,24 @@ address {
   fill: #afb1b8;
 }
 
+.social-icon-item {
+  margin-right: 10px;
+}
+
+.social-icon-item:last-child {
+  margin-right: 0;
+}
+
 .linc-icon.bot {
   background: rgba(255, 255, 255, 0.1);
 }
 
 .social-icon {
   fill: inherit;
+}
+
+.social-icon.join {
+  fill: #ffffff;
 }
 
 .linc-icon:hover,
@@ -777,8 +791,6 @@ address {
   margin-right: 32px;
   margin-left: 32px;
   padding: 0;
-
-  height: 44px;
 }
 
 .social-container {
